# sqlmodel2

sqlmodel2/: pyproject.toml
sqlmodel2/sqlmodel2/: main.py  settings.py
sqlmodel2/tests/: test.py
