[tool.poetry]
name = "sqlmodel2"
version = "0.1.0"
description = ""
authors = ["Muhammad Nouman Attique <nomiking0072012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
